# ReCaptcher

./: .gitignore  CHANGELOG.md  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
configs/: ds_build.yaml  ds_collect.yaml  ds_vocab.yaml  predictions.yaml  resnet_encoder.yaml  training.yaml  transformer.yaml
src/analytics/: __main__.py
src/analytics/inferences/: __init__.py  base.py  pbar.py
src/analytics/metrics/: __init__.py  base.py  cer.py  mean.py  ncc.py  psnr.py  ssim.py  value.py
src/analytics/models/: __init__.py  base.py
src/analytics/trainers/: base.py  pbar.py  training_report.py
src/analytics/trainers/callbacks/: __init__.py  base.py
src/analytics/trainers/checkpoints/: __init__.py  default.py
src/analytics/utils/data/: data_loader.py
src/pgit/: __init__.py  pgit.py
src/recaptcher/: __main__.py  dataset.py  predictions.py  training.py  utils.py
src/recaptcher/models/: resnet_gru.py  tokenizer.py
src/recaptcher/models/preprocessing/: __init__.py  image_processing.py  tokenizer.py
tests/: test_character_tokenizer.py
