[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recaptcher"
version = "0.1.0"
description = "Response to Captcha composer."
readme = "README.md"
authors = [
    { name = "Arnold Mokira", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["character-recognition", "ocr", "captcha"]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/mokira3d48/ReCaptcher"

[tool.setuptools.packages.find]
where = ["src"]
